[project]
name = "assayo"
version = "0.0.1"
authors = [
  { name="Aleksei Bakhirev" },
]
description = "Visualization and analysis of git commit statistics. Team Lead performance tool."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bakhirev/assayo"
Issues = "https://github.com/bakhirev/assayo/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
